--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "id": "96535d97-5cc4-47a1-b419-9a2fb6e98e83",
    "metadata": {
-    "tags": [],
     "pycharm": {
      "name": "#%% md\n"
-    }
+    },
+    "tags": []
    },
    "source": [
     "# Setup"
@@ -61,11 +61,10 @@
    "cell_type": "markdown",
    "id": "d11b9954-78fe-4526-964f-112c8ec9d0ea",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": [],
     "pycharm": {
      "name": "#%% md\n"
-    }
+    },
+    "tags": []
    },
    "source": [
     "## Compressing the Data"
@@ -74,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bace0826-9bf5-4fc1-b706-24595be00479",
+   "id": "fec98556-76e8-4434-83d3-fd4daeaceb2e",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -82,43 +81,25 @@
    },
    "outputs": [],
    "source": [
-    "%%cython\n",
     "import pandas as pd\n",
+    "import pickle\n",
+    "data = pd.read_csv(\"data/data.csv\", index_col=0)\n",
     "\n",
-    "data = pd.read_csv(\"data/data.csv\", index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39e62c8b-b613-462f-a719-edc809ee1eef",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
     "int64_cols = data.select_dtypes(\"int64\")\n",
     "for c in int64_cols:\n",
-    "    data[c] = data[c].astype(\"uint8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f31b52c6-af21-4a44-9ed5-c4b94a3bf18e",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# fl16_cols = data.select_dtypes(include=\"float64\")\n",
+    "    data[c] = data[c].astype(\"category\")\n",
     "\n",
-    "# for c in fl16_cols:\n",
-    "#     data[c] = data[c].astype(np.float32)"
+    "fl16_cols = data.select_dtypes(include=\"float64\")\n",
+    "\n",
+    "for c in fl16_cols:\n",
+    "    data[c] = data[c].astype(np.float32)\n",
+    "\n",
+    "na_mat = data.isna()\n",
+    "\n",
+    "miss_row = na_mat.sum(axis=1)\n",
+    "\n",
+    "data[\"missing_cols\"] = miss_row\n",
+    "data.to_pickle('cooked.pkl')"
    ]
   },
   {
@@ -248,7 +229,7 @@
    "outputs": [],
    "source": [
     "# \"F_2_0\".replace(\"_\", \"\") + \"_\"\n",
-    "# spar.info()\n"
+    "# spar.info()"
    ]
   },
   {
@@ -315,9 +296,12 @@
    "cell_type": "markdown",
    "id": "8d0a169d-ec7f-438c-8a9e-d5077d6f9470",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "pycharm": {
      "name": "#%% md\n"
-    }
+    },
+    "tags": [],
+    "toc-hr-collapsed": true
    },
    "source": [
     "## Load Compressed Data"
@@ -1219,9 +1203,11 @@
    "cell_type": "markdown",
    "id": "00439085-69d6-4e64-9b46-a96dc29cc403",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "pycharm": {
      "name": "#%% md\n"
-    }
+    },
+    "tags": []
    },
    "source": [
     "# ML"
@@ -1250,14 +1236,14 @@
    "execution_count": 2,
    "id": "12810c5a-8543-4af4-8b10-4ef337558a70",
    "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    },
     "tags": [
      "hide_output",
      "collapsed",
      "hide_code"
-    ],
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    ]
    },
    "outputs": [],
    "source": [
@@ -1292,10 +1278,10 @@
    "execution_count": 3,
    "id": "ca309261-5b3b-4e3c-ab33-d4e3753577aa",
    "metadata": {
-    "tags": [],
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1964,7 +1950,7 @@
      "output_type": "stream",
      "text": [
       "NOTE: Enter 'c' at the ipdb>  prompt to continue execution.\n",
-      "> \u001B[0;32m<string>\u001B[0m(2)\u001B[0;36m<module>\u001B[0;34m()\u001B[0m\n",
+      "> \u001b[0;32m<string>\u001b[0m(2)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
       "\n"
      ]
     },
