--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fec98556-76e8-4434-83d3-fd4daeaceb2e",
    "metadata": {
     "pycharm": {
@@ -83,7 +83,8 @@
    "source": [
     "import pandas as pd\n",
     "import pickle\n",
-    "data = pd.read_csv(\"data/data.csv\", index_col=0)\n",
+    "import numpy as np\n",
+    "data = pd.read_csv(\"../data/data.csv\", index_col=0)\n",
     "\n",
     "int64_cols = data.select_dtypes(\"int64\")\n",
     "for c in int64_cols:\n",
@@ -98,7 +99,7 @@
     "\n",
     "miss_row = na_mat.sum(axis=1)\n",
     "\n",
-    "data[\"missing_cols\"] = miss_row\n",
+    "data[\"missing_cols\"] = miss_row.astype(np.uint8)\n",
     "data.to_pickle('cooked.pkl')"
    ]
   },
