organized lock on nb

--- a/notebooks/final.ipynb
+++ b/notebooks/final.ipynb
@@ -75,6 +75,8 @@
    "cell_type": "markdown",
    "id": "7dcb1b0f-7baf-40f4-abe6-dc5561b5d328",
    "metadata": {
+    "deletable": false,
+    "editable": false,
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
@@ -141,6 +143,8 @@
    "cell_type": "markdown",
    "id": "ab6cfc9b-8557-4fbd-9799-913b804cee22",
    "metadata": {
+    "deletable": false,
+    "editable": false,
     "tags": []
    },
    "source": [
@@ -152,6 +156,8 @@
    "cell_type": "markdown",
    "id": "7f4d0a18-274e-44db-92a6-856e556c6325",
    "metadata": {
+    "deletable": false,
+    "editable": false,
     "tags": []
    },
    "source": [
@@ -174,6 +180,8 @@
    "cell_type": "markdown",
    "id": "f6fde632-4c3a-473a-802e-99f0fc6f7338",
    "metadata": {
+    "deletable": false,
+    "editable": false,
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
@@ -208,6 +216,9 @@
    "cell_type": "markdown",
    "id": "5dd23dec-0c1d-4f82-a99b-68905b981b5f",
    "metadata": {
+    "deletable": false,
+    "editable": false,
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -219,6 +230,8 @@
    "cell_type": "markdown",
    "id": "51808c20-2d94-401e-b7d6-f1e41b1cf53d",
    "metadata": {
+    "deletable": false,
+    "editable": false,
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
@@ -262,7 +275,17 @@
     "for f in pdic.columns:\n",
     "    pdic_np = pdic[f].to_numpy()\n",
     "    correlation_variance_cols[f] = {'max_col': percent_diff_in_correlation.columns[pdic_np.argmax()],\n",
-    "                               'min_col':percent_diff_in_correlation.columns[pdic_np.argmin()]}"
+    "                               'min_col':percent_diff_in_correlation.columns[pdic_np.argmin()]}\n",
+    "    # finding the magitude\n",
+    "variation_magnitude={}\n",
+    "for f in pdic.columns:\n",
+    "    pdic_np = pdic[f].to_numpy()\n",
+    "    variation_magnitude[f] = {'max_col': pdic_np.max(),\n",
+    "                               'min_col':pdic_np.min()}\n",
+    "    correlation_vector_distance = {}\n",
+    "for f in pdic.columns:\n",
+    "    pdic_np = pdic[f].to_numpy()\n",
+    "    correlation_vector_distance[f] = np.linalg.norm(pdic_np)**0.5"
    ]
   },
   {
@@ -273,21 +296,6 @@
    "outputs": [],
    "source": [
     "dfy(correlation_variance_cols)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9939925a-a6da-4c3f-933c-94c7b44f70eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# finding the magitude\n",
-    "variation_magnitude={}\n",
-    "for f in pdic.columns:\n",
-    "    pdic_np = pdic[f].to_numpy()\n",
-    "    variation_magnitude[f] = {'max_col': pdic_np.max(),\n",
-    "                               'min_col':pdic_np.min()}"
    ]
   },
   {
@@ -312,41 +320,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bca97d3e-2406-4ecf-817d-d42c0c8eaf61",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "#### Correlations EDA\n",
-    "![Image](max_corr_var.png)\n",
-    "![Image](sdfs.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9d88e6e-7a39-4bbe-b37c-71935d6609e2",
-   "metadata": {},
-   "source": [
-    ">Correlation in total Data vs Correlation in non-missing data slice varies heavily for certain features\n",
-    ">>Deviation_distance is needed for exploration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95ccf8fb-7630-4f67-8146-d12aeb881a37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correlation_vector_distance = {}\n",
-    "for f in pdic.columns:\n",
-    "    pdic_np = pdic[f].to_numpy()\n",
-    "    correlation_vector_distance[f] = np.linalg.norm(pdic_np)**0.5"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "43b52a8d-186b-4f37-9f04-5cdbc4b33616",
@@ -363,8 +336,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bca97d3e-2406-4ecf-817d-d42c0c8eaf61",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "tags": []
+   },
+   "source": [
+    "#### Correlations EDA\n",
+    "![Image](max_corr_var.png)\n",
+    "![Image](sdfs.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9d88e6e-7a39-4bbe-b37c-71935d6609e2",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    ">Correlation in total Data vs Correlation in non-missing data slice varies heavily for certain features\n",
+    ">>Deviation_distance is needed for exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "610b0fbb-17d4-482b-9d46-72b724165310",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "tags": []
+   },
    "source": [
     "#### Deviation Distance\n",
     "![Image](devd-Copy1.png)"
@@ -372,22 +379,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "0d9112b4-ca45-49e5-a923-e2f3774c714c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['F_4_8',\n",
+       " 'F_4_12',\n",
+       " 'F_3_22',\n",
+       " 'F_4_13',\n",
+       " 'F_1_1',\n",
+       " 'F_4_9',\n",
+       " 'F_4_11',\n",
+       " 'F_3_12',\n",
+       " 'F_4_10',\n",
+       " 'F_3_17',\n",
+       " 'F_3_24',\n",
+       " 'F_1_4',\n",
+       " 'F_3_13',\n",
+       " 'F_4_0',\n",
+       " 'F_1_12',\n",
+       " 'F_3_4',\n",
+       " 'F_3_0',\n",
+       " 'F_4_14',\n",
+       " 'F_1_2',\n",
+       " 'F_1_14',\n",
+       " 'F_3_18',\n",
+       " 'F_1_11',\n",
+       " 'F_1_7',\n",
+       " 'F_3_6',\n",
+       " 'F_1_0',\n",
+       " 'F_1_10',\n",
+       " 'F_3_21',\n",
+       " 'F_4_2',\n",
+       " 'F_3_5',\n",
+       " 'F_3_10',\n",
+       " 'F_1_13',\n",
+       " 'F_3_3',\n",
+       " 'F_3_15',\n",
+       " 'F_3_2',\n",
+       " 'F_3_16',\n",
+       " 'F_1_8',\n",
+       " 'F_3_14',\n",
+       " 'F_4_1',\n",
+       " 'F_3_1',\n",
+       " 'F_3_19',\n",
+       " 'F_4_7',\n",
+       " 'F_3_23',\n",
+       " 'F_4_4',\n",
+       " 'F_1_6',\n",
+       " 'F_1_3',\n",
+       " 'F_3_11',\n",
+       " 'F_1_5',\n",
+       " 'F_4_6',\n",
+       " 'F_3_9',\n",
+       " 'F_3_20',\n",
+       " 'F_3_7',\n",
+       " 'F_3_8',\n",
+       " 'F_4_5',\n",
+       " 'F_1_9',\n",
+       " 'F_4_3']"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(correlation_vector_distance.keys())"
+    "sorted(correlation_vector_distance,key=correlation_vector_distance.get)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "b71150b9-f499-4427-bbed-3272da78ec81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.40040800211401"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.ones(55)*7.5"
+    "correlation_vector_distance['F_4_3']"
    ]
   },
   {
